# Slo-Mo-Action-Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/glsl/: frag.glsl  vert.glsl
assets/levels/: test_level.json
spec/: gui_system.md  level.md
src/: main.cpp  test_screen.cpp  test_screen.hpp
src/engine/: anim_frame.cpp  anim_frame.hpp  animation.cpp  animation.hpp  blender exporter.py  camera.cpp  camera.hpp  canvas_size.hpp  color.hpp  ecs.cpp  ecs.hpp  engine.cpp  engine.hpp  entity_id.hpp  font.cpp  font.hpp  font_char.hpp  glyph.cpp  glyph.hpp  keyframe.cpp  keyframe.hpp  matrix.cpp  matrix.hpp  paint_controller.hpp  read_json.hpp  renderer.cpp  renderer.hpp  resource.cpp  resource.hpp  resource_defs.hpp  resource_manager.cpp  resource_manager.hpp  screen.hpp  texture.hpp  tileset.cpp  tileset.hpp  typedefs.hpp  vec.cpp  vec.hpp
src/engine/comp/: ai_enemy_basic.cpp  ai_enemy_basic.hpp  animation.cpp  animation.hpp  animations.cpp  animations.hpp  bullet.cpp  bullet.hpp  circle_collider.cpp  circle_collider.hpp  game_entity.cpp  game_entity.hpp  hud_entity.cpp  hud_entity.hpp  player_controlled.cpp  player_controlled.hpp  player_killable.cpp  player_killable.hpp  sprite.cpp  sprite.hpp  tilemap.cpp  tilemap.hpp  wall.cpp  wall.hpp  waypoint_graph.cpp  waypoint_graph.hpp
src/engine/editor/: README.md  editor.cpp  editor.hpp  entity_type.cpp  entity_type.hpp  entity_type_manager.cpp  entity_type_manager.hpp  input.cpp  input.hpp
src/engine/editor/gui/: common.cpp  common.hpp  context.cpp  context.hpp  entity_widget.cpp  entity_widget.hpp  gui.hpp
src/engine/editor/gui/std/: panel.cpp  panel.hpp  scrollable.hpp  sized.hpp  std.hpp
src/engine/input/: input_manager.cpp  input_manager.hpp  input_state.hpp
src/engine/level/: level.cpp  level.hpp  parse_comp_ai_enemy_basic.cpp  parse_comp_animation.cpp  parse_comp_circle_collider.cpp  parse_comp_game_entity.cpp  parse_comp_player_controlled.cpp  parse_comp_player_killable.cpp  parse_comp_sprite.cpp  parse_comp_tilemap.cpp  parse_comp_wall.cpp  parse_comp_waypoint_graph.cpp  parse_resources.cpp
src/engine/renderer/: batch.cpp  batch.hpp  paint_buffer.cpp  paint_buffer.hpp  paint_controller.cpp  paint_controller.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  tex_cache.cpp  tex_cache.hpp  vertex.cpp  vertex.hpp
src/engine/system/: ai_enemy_basic.cpp  animation_update.cpp  bullet_collision.cpp  camera_update.cpp  check_death.cpp  debug_paint.cpp  game_entity_renderer.cpp  globals.hpp  hud_renderer.cpp  paint_system.hpp  physics.cpp  player_controlled.cpp  player_effect_renderer.cpp  shadow_renderer.cpp  system.hpp  system_game_entity.cpp  system_game_entity.hpp  teleport.cpp  teleport_renderer.cpp  tilemap_renderer.cpp  update_system.hpp  wall_collision.cpp  wall_renderer.cpp
src/engine/util/: binary_search.cpp  binary_search.hpp  io.cpp  io.hpp
